--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Firefox sidebar generator</h1>
-<form id="sidebar-generator" class="container" action="#">
+<form id="sidebar-form" class="container" action="#">
 	<p><label for="sidebar-name" class="required">Name</label><input type="text" id="sidebar-name" class="input" required></p>
 	<p style="overflow:auto">
 		<label>Icons</label>
