--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
 <h1>Firefox sidebar generator</h1>
 <form id="sidebar-form" class="container" action="#">
+	<p>Make sure you have <a href="https://nt1m.github.io/firefox-sidebar-generator">https://nt1m.github.io/firefox-sidebar-generator</a> in the `social.directories` about:config pref.</p>
 	<p><label for="sidebar-name" class="required">Name</label><input type="text" id="sidebar-name" class="input" required></p>
-	<p style="overflow:auto">
+	<p style="overflow: auto">
 		<label>Icons</label>
 		<span style="float: right;">
 			<label class="file-input" label="Toolbar icon" size="16x16"><input type="file" onchange="FxSidebarGenerator.setIcon(this.files[0],'16',this.parentNode);"/></label>
