Update instructions with correct origin

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Firefox sidebar generator</h1>
 <form id="sidebar-form" class="container" action="#">
-	<p>Make sure you have <a href="https://nt1m.github.io/firefox-sidebar-generator">https://nt1m.github.io/firefox-sidebar-generator</a> in the `social.directories` about:config pref.</p>
+	<p>Make sure you have <a href="https://nt1m.github.io/firefox-sidebar-generator">https://nt1m.github.io</a> in the `social.directories` about:config pref.</p>
 	<p><label for="sidebar-name" class="required">Name</label><input type="text" id="sidebar-name" class="input" required></p>
 	<p style="overflow: auto">
 		<label>Icons</label>
